<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello" translatable="false">Привет,Практикум</string>
    <string name="name_setting" translatable="false">Настройки</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="name_media" translatable="false">Медиатека</string>
    <string name="name_search" translatable="false">Поиск</string>
    <string name="night_theme" translatable="false">Темная тема</string>
    <string name="share_option" translatable="false">Поделиться приложением</string>
    <string name="write_in_tudasyda" translatable="false">Написать в поддержку</string>
    <string name="user_accepted" translatable="false">Пользовательское соглашение</string>
    <string name="message" translatable="false">Первоклассным Android разарботчиком можно стать всего за один вечер! Для этого нужно лишь...</string>
    <string name="not_interested">Не интересно</string>
    <string name="details">Подробнее</string>
    <string name="search">Поиск</string>
    <string name="linkOnAndDevol">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="shareSub">https://github.com/ZarubaGit/PlaylistMaker</string>
    <string name="messageForEmail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageForEmailDevolp">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="offerta">https://yandex.ru/legal/practicum_offer/</string>
    <string name="titleForShareIcon">Поделиться с помощью:</string>
    <string name="emailMy">zaruba.nikit@yandex.ru</string>
    <string name="trackDuration">Продолжительность трека</string>
    <string name="nameArtist">Имя исполнителя</string>
    <string name="songName">Название композиции</string>
    <string name="nothing_find">Ничего не нашлось</string>
    <string name="trouble_with_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refreshButton">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_story">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="relise_year">Год</string>
    <string name="genreName">Жанр</string>
    <string name="mediateka">Медиатека</string>
    <string name="country">Страна</string>
    <string name="buttonNewPlayList">Новый плейлист</string>
    <string name="player_in_progress">Трек загружается</string>
    <string name="emtyMediateka">Ваша медиатека пуста</string>
    <string name="favoritsTrack">Избранные треки</string>
    <string name="playLists">Плейлисты</string>
    <string name="emtyPlayList">Вы не создали ни одного плейлиста</string>
    <string name="timebar_start">00:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_in_playList">Добавить в плейлист</string>
    <string name="new_playList">Новый плейлист</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="counts_track">XX треков</string>
    <string name="title_name">Название*</string>
    <string name="description">Описание</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_image_description">Картинка для плейлиста</string>
    <string name="create">Создать</string>
    <string name="playlist_image_not_selected">Картинка не выбрана</string>
    <string name="rationale_permission">Это разрешения необходимо для добавления картинки к плейлисту</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_cancel">Отмена</string>
    <string name="playlist_dialog_confirm">Завершить</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="playlist_track_exists">Трек уже добавлен в плейлист "%s"</string>
    <string name="playlist_track_added">Добавлено в плейлист "%s"</string>
    <string name="playlist_empty">В плейлисте нет треков</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="track_delete_from_playlist_message">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редкатировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_delete_message">Хотите удалить плейлист?</string>
    <string name="track_delete">Удалить трек</string>
    <string name="playlist_no_tracks_to_share">В этом плейлисте нет трека, которым можно поделиться</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <plurals name="track_counter">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes_counter">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минут</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>


</resources>