<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spaceFromStartFrameLayout"
    tools:context=".ui.setting.fragment.SettingsFragment">

    <Toolbar
        android:id="@+id/toolBar"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/name_setting"
        android:titleTextAppearance="@style/textMediatekaToolBar" />

    <FrameLayout
        style="@style/FrameForSettingActivity"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/TextStyleForSetting"
            android:text="@string/night_theme" />


        <Switch
            android:id="@+id/switchTheme"
            style="@style/Switch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </FrameLayout>

    <FrameLayout style="@style/FrameForSettingActivity">

        <TextView
            style="@style/TextStyleForSetting"
            android:text="@string/share_option" />

        <ImageView
            android:id="@+id/buttonShare"
            style="@style/IconStyleForSetting"
            android:src="@drawable/baseline_share_24" />
    </FrameLayout>

    <FrameLayout style="@style/FrameForSettingActivity">

        <TextView
            style="@style/TextStyleForSetting"
            android:text="@string/write_in_tudasyda" />

        <ImageView
            android:id="@+id/sendInSupport"
            style="@style/IconStyleForSetting"
            android:src="@drawable/group" />
    </FrameLayout>

    <FrameLayout style="@style/FrameForSettingActivity">

        <TextView
            style="@style/TextStyleForSetting"
            android:text="@string/user_accepted" />

        <ImageView
            android:id="@+id/userAccepted"
            style="@style/IconStyleForSetting"
            android:src="@drawable/galochka" />
    </FrameLayout>

</LinearLayout>