<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StyleFromBackgroundMainActivity">


    <TextView
        android:id="@+id/nameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/title"
        android:textColor="@color/YP_White"
        android:textFontWeight="500"
        android:textSize="22sp" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearch"
            style="@style/ButtonStyle"
            android:text="@string/name_search"
            app:cornerRadius="@dimen/buttonCorner"
            app:icon="@drawable/vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_onMain_Activity"
            app:iconTint="@color/YP_Black" />


        <Button
            android:id="@+id/buttonMedia"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/betweenButton"
            android:text="@string/name_media"
            app:cornerRadius="@dimen/buttonCorner"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_onMain_Activity"
            app:iconTint="@color/YP_Black" />

        <Button
            android:id="@+id/buttonSetting"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/betweenButton"
            android:text="@string/name_setting"
            app:cornerRadius="@dimen/buttonCorner"
            app:icon="@drawable/group2"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_onMain_Activity"
            app:iconTint="@color/YP_Black" />


    </LinearLayout>


</LinearLayout>