<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlistCoordinator"
    android:background="@color/YP_Light_Gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.media.playListDetails.PlaylistDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/playlistDetailsCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/playlist_image_description"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder" />

        <Toolbar
            android:id="@+id/toolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/light_mode"
            android:titleTextAppearance="@style/textMediatekaToolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_16_pl"
            style="@style/GuideLines"
            app:layout_constraintGuide_begin="@dimen/dimen16dp" />

        <TextView
            android:id="@+id/playlistName"
            style="@style/textPlaylist"
            android:fontFamily="@font/ys_display_bold"
            android:textSize="@dimen/dimen22sp"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/playlistDetailsCover"
            tools:text="@string/title_name" />

        <TextView
            android:id="@+id/playlistDescription"
            style="@style/textPlaylist"
            android:layout_marginTop="@dimen/dimen8dp"
            android:textSize="@dimen/dimen18sp"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/playlistName"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/playlistStats"
            style="@style/textPlaylist"
            android:layout_marginTop="@dimen/dimen8dp"
            android:textSize="@dimen/dimen18sp"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/playlistDescription"
            tools:text="300 минут * 98 треков" />


        <ImageView
            android:id="@+id/buttonPlaylistShare"
            style="@style/PlaylistIcon"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/playlistStats" />

        <ImageView
            android:id="@+id/buttonPlaylistMenu"
            style="@style/PlaylistIcon"
            android:layout_marginStart="@dimen/dimen16dp"
            android:src="@drawable/three_points"
            app:layout_constraintStart_toEndOf="@id/buttonPlaylistShare"
            app:layout_constraintTop_toBottomOf="@id/playlistStats" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlayPl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/bottomSheetPlaylistTracks"
        style="@style/BottomSheetLinearLayoutThemed"
        app:behavior_hideable="false">

        <View style="@style/BottomSheetHandle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPlaylistTracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_track" />

        <TextView
            android:id="@+id/playlistEmpty"
            style="@style/textPlaylist"
            android:layout_gravity="center"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/playlist_empty"
            android:textSize="@dimen/dimen18sp"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            tools:text="В плейлисте нет треков" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomSheetPlaylistMenu"
        style="@style/BottomSheetLinearLayoutThemed">

        <View style="@style/BottomSheetHandle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/playlistDetailsCoverMenu"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >
                <TextView
                    android:id="@+id/playlistNameMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen16sp"
                    android:textColor="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_regular"
                    tools:text="@string/title_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />
                <TextView
                    android:id="@+id/playlistDescriptionMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/YP_Light_Gray"
                    android:fontFamily="@font/ys_display_regular"
                    tools:text="@string/description"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/playlistMenuButton"
            android:id="@+id/buttonPlaylistShare2"
            android:text="@string/share"
            />
        <Button
            style="@style/playlistMenuButton"
            android:id="@+id/buttonPlaylistEdit"
            android:text="@string/edit_information"
            />
        <Button
            style="@style/playlistMenuButton"
            android:id="@+id/buttonPlaylistDelete"
            android:text="@string/playlist_delete"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


