<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/artworkImageView"
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_gravity="start|center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trackNameTextView"
        style="@style/Base.Theme.PlaylistMaker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:text="@string/songName"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/trackGalochka"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/artworkImageView"
        app:layout_constraintTop_toTopOf="@+id/artworkImageView" />

    <ImageView
        android:id="@+id/trackGalochka"
        style="@style/IconStyleForItemTrack"
        android:layout_marginEnd="8dp"
        android:src="@drawable/galochka"
        app:layout_constraintBottom_toBottomOf="@+id/artworkImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artworkImageView" />

    <TextView
        android:id="@+id/trackTimeTextView"
        android:layout_width="215dp"
        android:layout_height="12dp"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:text="@string/trackDuration"
        android:textSize="@dimen/textForArtistName"
        android:theme="@style/artistTextColor"
        app:layout_constraintEnd_toStartOf="@+id/trackGalochka"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/trackNameTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic"
        android:theme="@style/colorDot"
        app:layout_constraintBottom_toBottomOf="@+id/artistNameTextView"
        app:layout_constraintStart_toEndOf="@+id/artistNameTextView"
        app:layout_constraintTop_toTopOf="@+id/artistNameTextView" />

    <TextView
        android:id="@+id/artistNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:maxLength="50"
        android:text="@string/nameArtist"
        android:textSize="@dimen/textForArtistName"
        android:theme="@style/artistTextColor"
        app:layout_constraintEnd_toStartOf="@+id/trackGalochka"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/artworkImageView"
        app:layout_constraintTop_toBottomOf="@+id/trackNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>